--- a/1--all/pom.xml
+++ b/1--all/pom.xml
@@ -25,9 +25,23 @@
     	<artifactId>junit</artifactId>
     	<version>4.11</version>
     </dependency>
+    
+    <!-- webservice  begin -->
+    <dependency>
+    	<groupId>axis</groupId>
+    	<artifactId>axis</artifactId>
+    	<version>1.3</version>
+    </dependency>
+    <!-- webservice   end  -->
+
+
+
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-api</artifactId>
+    	<version>1.7.12</version>
+    </dependency>
   </dependencies>
-  
-  
    <build>
       <plugins>
         <plugin>
