--- a/1--all/.classpath
+++ b/1--all/.classpath
@@ -18,5 +18,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/lib/java_memcached-release_2.6.6.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
