--- a/1--all/pom.xml
+++ b/1--all/pom.xml
@@ -15,16 +15,18 @@
   </properties>
 
   <dependencies>
+  	<dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.11</version>
+    </dependency>
+    
     <dependency>
     	<groupId>dom4j</groupId>
     	<artifactId>dom4j</artifactId>
     	<version>1.6</version>
     </dependency>
-    <dependency>
-    	<groupId>junit</groupId>
-    	<artifactId>junit</artifactId>
-    	<version>4.11</version>
-    </dependency>
+    
     
     <!-- webservice  begin -->
     <dependency>
@@ -33,14 +35,38 @@
     	<version>1.3</version>
     </dependency>
     <!-- webservice   end  -->
-
-
-
+	
+	<!-- log4j 配置  begin-->
     <dependency>
     	<groupId>org.slf4j</groupId>
-    	<artifactId>slf4j-api</artifactId>
-    	<version>1.7.12</version>
+    	<artifactId>slf4j-log4j12</artifactId>
+    	<version>1.7.6</version>
     </dependency>
+    <!-- log4j 配置  end -->
+	<!-- 邮件 发送   begin -->
+    <dependency>
+    	<groupId>javax.mail</groupId>
+    	<artifactId>mail</artifactId>
+    	<version>1.4</version>
+    </dependency>
+    <!-- 邮件发送  end -->
+    <!-- redis 客户端  begin -->
+    <dependency>
+    	<groupId>redis.clients</groupId>
+    	<artifactId>jedis</artifactId>
+    	<version>2.5.0</version>
+    </dependency>
+    <!-- redis  end -->
+    <dependency>
+    	<groupId>org.jsoup</groupId>
+    	<artifactId>jsoup</artifactId>
+    	<version>1.7.2</version>
+    </dependency>
+    <dependency>
+		<groupId>commons-pool</groupId>
+		<artifactId>commons-pool</artifactId>
+		<version>1.5.6</version>
+	</dependency>
   </dependencies>
    <build>
       <plugins>
