--- a/1--all/src/main/resources/log4j.properties
+++ b/1--all/src/main/resources/log4j.properties
@@ -1,7 +1,9 @@
 #loggers
-
+log4j.rootLogger=info,stdout
 
 log4j.logger.base=debug, stdout,baseLog
+#base independence
+log4j.additivity.base=false           
 log4j.appender.baseLog=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.DatePattern='.'yyyy-MM-dd
 log4j.appender.baseLog.File=${catalina.base}/logs/1-all/base.log
@@ -12,8 +14,6 @@ log4j.appender.baseLog.layout.ConversionPattern=%d %-5p  %-50m  ## %l  [%t] %n
 
     ###  ConsoleAppender Š
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-	###patternLayout   
-log4j.appender.stdout.Threshold=debug
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %-5p  %-50m  ## %l  [%t] %n
 
