--- a/1--all/src/main/resources/log4j.properties
+++ b/1--all/src/main/resources/log4j.properties
@@ -15,7 +15,7 @@ log4j.appender.baseLog.layout.ConversionPattern=%d %-5p  %-50m  ## %l  [%t] %n
     ###  ConsoleAppender Š
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %-5p  %-50m  ## %l  [%t] %n
+log4j.appender.stdout.layout.ConversionPattern=%d %-5p  %-60m  ## (%F:%L) %l  [%t] %n
 
 
 log4j.logger.com.ibatis.common.jdbc.SimpleDataSource = DEBUG  
