--- a/3--spring/pom.xml
+++ b/3--spring/pom.xml
@@ -7,28 +7,9 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>base Maven Webapp</name>
   <url>http://maven.apache.org</url>
-   <build>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
-          <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
-          </configuration>
-        </plugin>
-      </plugins>
-     <finalName></finalName>
-    </build>
+  
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-     
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
@@ -80,5 +61,20 @@
       <artifactId>spring-beans</artifactId>
       <version>4.1.2.RELEASE</version>
     </dependency>
+    
   </dependencies>
+  <build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+		<finalName>spring</finalName>
+	</build>
 </project>
