--- a/1--all/.settings/org.eclipse.core.resources.prefs
+++ b/1--all/.settings/org.eclipse.core.resources.prefs
@@ -8,5 +8,6 @@ encoding//src/main/java/se/se/annotation_proxy/com/annotation_proxy/MethdDaoProx
 encoding//src/main/java/se/se/io_project/IOExample2.java=UTF-8
 encoding//src/main/java/se/se/io_project/IOExceptionCopyByByteStream.java=UTF-8
 encoding//src/main/java/se/se/saxParseXML/TextSaxParseXml.java=ISO-8859-1
+encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
