--- a/3--struts/pom.xml
+++ b/3--struts/pom.xml
@@ -50,6 +50,11 @@
       <artifactId>xwork-core</artifactId>
       <version>2.3.16.3</version>
     </dependency>
+    <dependency>
+    	<groupId>net.sf.json-lib</groupId>
+    	<artifactId>json-lib</artifactId>
+    	<version>2.2.3</version>
+    </dependency>
   </dependencies>
   <build>
   <plugins>
