--- a/1--all/pom.xml
+++ b/1--all/pom.xml
@@ -70,6 +70,11 @@
 		</dependency>
 		<!-- memcached end -->
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
