--- a/3--spring/pom.xml
+++ b/3--spring/pom.xml
@@ -61,7 +61,32 @@
       <artifactId>spring-beans</artifactId>
       <version>4.1.2.RELEASE</version>
     </dependency>
-    
+
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-test</artifactId>
+    	<version>3.1.3.RELEASE</version>
+    </dependency>
+    <dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.11</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-jms</artifactId>
+    	<version>4.0.4.RELEASE</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.activemq</groupId>
+    	<artifactId>activemq-pool</artifactId>
+    	<version>5.8.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.activemq</groupId>
+    	<artifactId>activemq-all</artifactId>
+    	<version>5.8.0</version>
+    </dependency>
   </dependencies>
   <build>
 		<plugins>
