--- a/1--all/src/main/resources/log4j.properties
+++ b/1--all/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #loggers
-log4j.rootLogger=info,stdout
+log4j.rootLogger=debug,stdout
 
 log4j.logger.base=debug, stdout,baseLog
 #base independence
@@ -12,7 +12,7 @@ log4j.appender.baseLog.layout.ConversionPattern=%d %-5p  %-50m  ## %l  [%t] %n
 
 
 
-    ###  ConsoleAppender Š
+    ###  ConsoleAppender \ufffd
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %-5p  %-60m  ## (%F:%L) %l  [%t] %n
