--- a/li_util/pom.xml
+++ b/li_util/pom.xml
@@ -11,34 +11,34 @@
 	<version>1.2.4</version>
 	<name>lijian's Core Module</name>
 	<url>http://www.lijianblog.com/</url>
-	<properties>
-	
-			<spring.version>4.0.4.RELEASE</spring.version>
-			
-			<!-- ========================================================== -->
-	
+<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
+	
 	<dependencies>
-		<!-- spring -->
-		
-
-		<!-- test -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<scope>compile</scope>
-			<optional>true</optional>
-			<version>4.12</version>
+			<version>4.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.8</version>
 		</dependency>
 		
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.34</version>
-		</dependency>
+		 <dependency>
+     	 <groupId>org.hibernate</groupId>
+		 <artifactId>hibernate-core</artifactId>
+	      <version>4.3.7.Final</version>
+	    </dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<!-- Eclipse plugin -->
