--- a/li_util/pom.xml
+++ b/li_util/pom.xml
@@ -1,71 +1,59 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<!-- <parent>
-		<artifactId>li-all</artifactId>
-		<groupId>com.lijian</groupId>
-		<version>1.2.4</version>
-	</parent> -->
-	<groupId>com.lijian</groupId>
-	<artifactId>base</artifactId>
-	<version>1.2.4</version>
-	<name>lijian's Core Module</name>
-	<url>http://www.lijianblog.com/</url>
-	<properties>
-	
-			<spring.version>4.0.4.RELEASE</spring.version>
-			
-			<!-- ========================================================== -->
-	
-	</properties>
-
-	<dependencies>
-		<!-- spring -->
-		
-
-		<!-- test -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>compile</scope>
-			<optional>true</optional>
-			<version>4.12</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.34</version>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<plugins>
-			<!-- Eclipse plugin -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<configuration>
-					<wtpversion>none</wtpversion>
-				</configuration>
-			</plugin>
-
-			<!-- Source attach plugin -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.lijian</groupId>
+  <artifactId>base</artifactId>
+  
+  <packaging>war</packaging>
+  <version>0.0.1-SNAPSHOT</version>
+  <name>js Maven Webapp</name>
+  <url>http://maven.apache.org</url>
+  <dependencies>
+    
+    
+    <dependency>
+    	<groupId>javax.servlet.jsp</groupId>
+    	<artifactId>jsp-api</artifactId>
+    	<version>2.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>servlet-api</artifactId>
+    	<version>2.5</version>
+    </dependency>
+	 <dependency>
+	 	<groupId>jstl</groupId>
+	 	<artifactId>jstl</artifactId>
+	 	<version>1.2</version>
+	 </dependency>
+	 <dependency>
+	 	<groupId>net.sf.json-lib</groupId>
+	 	<artifactId>json-lib</artifactId>
+	 	<version>2.2.3</version>
+	 </dependency>
+	 <dependency>
+	 	<groupId>org.freemarker</groupId>
+	 	<artifactId>freemarker</artifactId>
+	 	<version>2.3.19</version>
+	 </dependency>
+	 <dependency>
+	 	<groupId>junit</groupId>
+	 	<artifactId>junit</artifactId>
+	 	<version>4.12</version>
+	 </dependency>
+  </dependencies>
+  <build>
+	   <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <source>1.6</source>
+              <target>1.6</target>
+            </configuration>
+          </plugin>
+        </plugins>
+		<finalName>base</finalName>
 	</build>
-    	
-
-
 </project>
