--- a/li_util/pom.xml
+++ b/li_util/pom.xml
@@ -42,6 +42,25 @@
 	 	<artifactId>junit</artifactId>
 	 	<version>4.12</version>
 	 </dependency>
+	 
+	 	<!-- swagger2 包 begin -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.8.6</version>
+		</dependency>
+		
+		<!-- swagger2 end -->
   </dependencies>
   <build>
 	   <plugins>
