--- a/li_util/.project
+++ b/li_util/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>li--util</name>
+	<name>1--kit</name>
 	<comment></comment>
 	<projects>
 	</projects>
