--- a/4--swagger/pom.xml
+++ b/4--swagger/pom.xml
@@ -4,10 +4,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.lijian</groupId>
-  <artifactId>4--swagger2</artifactId>
+  <artifactId>4--swagger</artifactId>
   
   <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2</version>
   <name>js Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -74,6 +74,6 @@
             </configuration>
           </plugin>
         </plugins>
-		<finalName>base</finalName>
+		<finalName>4-swagger</finalName>
 	</build>
 </project>
