修改  打印日志 引用 pom文件

--- a/1--base/pom.xml
+++ b/1--base/pom.xml
@@ -15,7 +15,11 @@
 		<fastjson.version>1.2.7</fastjson.version>
   </properties>
   <dependencies>
-    
+     <dependency>
+    	<groupId>lijian</groupId>
+    	<artifactId>1--all</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
     
     <dependency>
     	<groupId>javax.servlet.jsp</groupId>
