--- a/1--all/pom.xml
+++ b/1--all/pom.xml
@@ -88,6 +88,13 @@
 			<version>5.13.2</version>
 		</dependency>
 
+
+     <!-- 处理excel和上面功能是一样的-->
+        <dependency>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.10</version>
+        </dependency>
 		
 	</dependencies>
 	<build>
