--- a/1--all/pom.xml
+++ b/1--all/pom.xml
@@ -13,10 +13,16 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<fastjson.version>1.2.7</fastjson.version>
 	</properties>
 
 	<dependencies>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
@@ -108,7 +114,9 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			
 		</plugins>
 		<finalName>tool</finalName>
 	</build>
+	
 </project>
