--- a/1--base/pom.xml
+++ b/1--base/pom.xml
@@ -1,95 +1,172 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.lijian</groupId>
-  <artifactId>1--base</artifactId>
-  
-  <packaging>war</packaging>
-  <version>0.0.2</version>
-  <name>js Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.lijian</groupId>
+	<artifactId>1--base</artifactId>
+
+	<packaging>jar</packaging>
+	<version>0.0.2</version>
+	<name>js Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+
+
 	<properties>
 		<fastjson.version>1.2.7</fastjson.version>
-  </properties>
-  <dependencies>
-     <dependency>
-    	<groupId>lijian</groupId>
-    	<artifactId>1--all</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    
-    <dependency>
-    	<groupId>javax.servlet.jsp</groupId>
-    	<artifactId>jsp-api</artifactId>
-    	<version>2.1</version>
-    </dependency>
-    <dependency>
-    	<groupId>javax.servlet</groupId>
-    	<artifactId>servlet-api</artifactId>
-    	<version>2.5</version>
-    </dependency>
-	 <dependency>
-	 	<groupId>jstl</groupId>
-	 	<artifactId>jstl</artifactId>
-	 	<version>1.2</version>
-	 </dependency>
-	 <dependency>
-	 	<groupId>net.sf.json-lib</groupId>
-	 	<artifactId>json-lib</artifactId>
-	 	<version>2.2.3</version>
-	 </dependency>
-	 
-	 <dependency>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+
+	<!-- log4j 配置 begin -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.6</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>${fastjson.version}</version>
 		</dependency>
-	 
-	 <dependency>
-	 	<groupId>org.freemarker</groupId>
-	 	<artifactId>freemarker</artifactId>
-	 	<version>2.3.19</version>
-	 </dependency>
-	 <dependency>
-	 	<groupId>junit</groupId>
-	 	<artifactId>junit</artifactId>
-	 	<version>4.12</version>
-	 </dependency>
-	
-	<!-- upload jar 上传文件 begin -->
-	 <dependency>
-	 	<groupId>commons-io</groupId>
-	 	<artifactId>commons-io</artifactId>
-	 	<version>2.0</version>
-	 </dependency>
- 	<dependency>
-		<groupId>commons-fileupload</groupId>
-		<artifactId>commons-fileupload</artifactId>
-		<version>1.2.2</version>
-	</dependency>
-	<!--upload jar  end -->
-	
-			<!-- HTML 解析器，提供 HTTP服务 -->
+
 		<dependency>
-		    <groupId>org.jsoup</groupId>
-		    <artifactId>jsoup</artifactId>
-		    <version>1.8.3</version>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.19</version>
 		</dependency>
-  </dependencies>
-  <build>
-	   <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <source>1.6</source>
-              <target>1.6</target>
-            </configuration>
-          </plugin>
-        </plugins>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+
+		<!-- upload jar 上传文件 begin -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		<!--upload jar end -->
+
+		<!-- HTML 解析器，提供 HTTP服务 -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+		</dependency>
+	 <dependency>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-compiler-plugin</artifactId>
+	<version>2.1</version>
+	<type>maven-plugin</type>
+	</dependency>
+
+
+	</dependencies>
+	<build>
+		<plugins>
+			<!-- <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin> -->
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<archive>
+						<manifest>
+							<mainClass>picc.DanHao</mainClass>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+						</manifest>
+
+					</archive>
+					<classesDirectory>
+					</classesDirectory>
+				</configuration>
+			</plugin>
+			
+			<!-- <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-dependency-plugin</artifactId>
+		        <executions>
+		          <execution>
+		            <id>copy</id>
+		            <phase>package</phase>
+		            <goals>
+		              <goal>copy-dependencies</goal>
+		            </goals>
+		            <configuration>
+		              <outputDirectory>
+		                ${project.build.directory}/lib
+		              </outputDirectory>
+		            </configuration>
+		          </execution>
+		        </executions>
+		      </plugin> -->
+          
+        
+        <!-- maven 打成jar 包的插件  -->
+         <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>${exec.mainClass}</mainClass>
+                                </transformer>
+                            </transformers>
+                            <artifactSet>
+                            </artifactSet>
+                            <!--<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>-->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+		</plugins>
 		<finalName>base</finalName>
 	</build>
+
+
+
 </project>
