修改  sheet 报错问题

--- a/1--base/config.properties
+++ b/1--base/config.properties
@@ -10,4 +10,7 @@ PICCINS_JFCD_Cookie=
 
 startTime=2017-06-21
 endTime=2017-06-25
-pageNo=1
+#\u7B2C\u51E0\u9875
+pageNo=2
+#xun huan duoshao ci \u5FAA\u73AF\u591A\u5C11\u6B21
+pageNoT=2
