修改了, 文件重复 刷新, 规划了异常信息

--- a/1--base/config.properties
+++ b/1--base/config.properties
@@ -3,14 +3,17 @@
 #\u53D6\u51FA\u51E0\u4E2A\u8F66\u724C 
 count=200
 
-JSESSIONID=GfwPbCLSGfJt02G4J1SyMNK2cTSKLdz1lWSjbHjs696HwhC2nwvn!1923568458
-BOCINS_prpall_Cookie=bP6tbCLJyTfVt2HBYjgCKJdBmTsvFrhXxF1yTqJkFjYLhf3FClT4!-648485322
+JSESSIONID=bg9XbDwY5lyp62v2fZhQQ4GhZygTfQqFNSJQrn1sb6HQTLLvVNpv!2146041557
+BOCINS_prpall_Cookie=91t4bDyLhLWx12hVJrWMHGnXjvTS7yTzKnyJP7Ql2svdPLvNB1rQ!-1643001897
 BOCINS_cif_Cookie=
 PICCINS_JFCD_Cookie=
 
 startTime=2017-06-21
 endTime=2017-06-25
 #\u7B2C\u51E0\u9875
-pageNo=2
+pageNo=14
 #xun huan duoshao ci \u5FAA\u73AF\u591A\u5C11\u6B21
-pageNoT=2
+pageNoT=20
+
+excelName=201706_2492.xls
+excelPath=C:\\Users\\Administrator\\Desktop\\
