修改配置文件的规则  改一个 别的自动生成

--- a/1--base/config.properties
+++ b/1--base/config.properties
@@ -8,12 +8,20 @@ BOCINS_prpall_Cookie=91t4bDyLhLWx12hVJrWMHGnXjvTS7yTzKnyJP7Ql2svdPLvNB1rQ!-16430
 BOCINS_cif_Cookie=
 PICCINS_JFCD_Cookie=
 
-startTime=2017-06-21
-endTime=2017-06-25
-#\u7B2C\u51E0\u9875
-pageNo=14
-#xun huan duoshao ci \u5FAA\u73AF\u591A\u5C11\u6B21
-pageNoT=20
 
-excelName=201706_2492.xls
+
+
 excelPath=C:\\Users\\Administrator\\Desktop\\
+#startTime=2017-06-21
+#endTime=2017-06-25
+#excelName=201706_2492.xls
+
+#\u7B2C\u51E0\u9875
+pageNo=1
+#xun huan duoshao ci \u5FAA\u73AF\u591A\u5C11\u6B21
+pageNoT=200
+yy=2017
+mm=06
+dd1=01
+dd2=15
+user=A110112492
