--- a/1--base/src/main/java/log4j.properties
+++ b/1--base/src/main/java/log4j.properties
@@ -6,7 +6,7 @@ log4j.logger.base=debug, stdout,baseLog
 log4j.additivity.base=false           
 log4j.appender.baseLog=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.DatePattern='.'yyyy-MM-dd
-log4j.appender.baseLog.File=${catalina.base}/lijian/logs/base.log
+log4j.appender.baseLog.File=${catalina.base}/lijian/logs/base${lijian}.log
 log4j.appender.baseLog.Append=true
 log4j.appender.baseLog.layout=org.apache.log4j.PatternLayout
 log4j.appender.baseLog.layout.ConversionPattern=%d %-5p  %-60m  ## (%F:%L) %l  [%t] %n
@@ -15,7 +15,7 @@ log4j.logger.data=info, stdout,dataLog
 log4j.additivity.data=false           
 log4j.appender.dataLog=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.DatePattern='.'yyyy-MM-dd
-log4j.appender.dataLog.File=${catalina.base}/lijian/logs/data/data${WORKDIR}.log
+log4j.appender.dataLog.File=${catalina.base}/lijian/logs/data/data${lijian}.log
 log4j.appender.dataLog.Append=true
 log4j.appender.dataLog.layout=org.apache.log4j.PatternLayout
 log4j.appender.dataLog.layout.ConversionPattern=%m%n
