修改格式.  文件格式. 等

--- a/1--base/config.properties
+++ b/1--base/config.properties
@@ -4,12 +4,12 @@
 count=200
 
 user=935160
-JSESSIONID=C72YbGRQTGWNQlXW2sZcY21vhtwq45xRLxmJgppGlLsNnZ37tTHM!2147349676
-BOCINS_prpall_Cookie=HMM6bGRN8PTG7NQpv8sZkLT2vd6K8KG3BWXVhLRHqZR2V4QbzKYS!1392034921
+JSESSIONID=MH7YbQzV8gW7j2fnw87n5MSdwfnJvLsV112fGytQ4yfq7sSmlhb7!-1898374258
+BOCINS_prpall_Cookie=MfctbQzG6rB6pNy6tJQP6GzD2TPvyZ6LbCyzRD89zzpLmvh1GCBp!565919815
 BOCINS_cif_Cookie=Q1k0bGYfhhpYYPv4v923cfLQhJJQCnnznQz2MQvgrLfbTmb9L31C!-1228698765
 PICCINS_JFCD_Cookie=
 
-
+					
 
 
 excelPath=C:\\Users\\Administrator\\Desktop\\
