每次 生成的数据 自动到一个文件夹下去

--- a/1--base/config.properties
+++ b/1--base/config.properties
@@ -3,12 +3,17 @@
 #\u53D6\u51FA\u51E0\u4E2A\u8F66\u724C 
 count=200
 
-user=935160
-JSESSIONID=MH7YbQzV8gW7j2fnw87n5MSdwfnJvLsV112fGytQ4yfq7sSmlhb7!-1898374258
-BOCINS_prpall_Cookie=MfctbQzG6rB6pNy6tJQP6GzD2TPvyZ6LbCyzRD89zzpLmvh1GCBp!565919815
+#user=A110002570
+#JSESSIONID=MH7YbQzV8gW7j2fnw87n5MSdwfnJvLsV112fGytQ4yfq7sSmlhb7!-1898374258
+#BOCINS_prpall_Cookie=MfctbQzG6rB6pNy6tJQP6GzD2TPvyZ6LbCyzRD89zzpLmvh1GCBp!565919815
+#BOCINS_cif_Cookie=Q1k0bGYfhhpYYPv4v923cfLQhJJQCnnznQz2MQvgrLfbTmb9L31C!-1228698765
+#PICCINS_JFCD_Cookie=
+
+user=980024
+JSESSIONID=pC34bQcX8XDmp1LST9GtkTfvSBv7S1QGLnzBVbnjzDk2P4hXyz1N!-1898374258
+BOCINS_prpall_Cookie=pFG2bQchJxKgLC9CbB2jF9X1zK6lMfn1K2TsG0ryQ59qxnkJWjjz!-53206610
 BOCINS_cif_Cookie=Q1k0bGYfhhpYYPv4v923cfLQhJJQCnnznQz2MQvgrLfbTmb9L31C!-1228698765
 PICCINS_JFCD_Cookie=
-
 					
 
 
