--- a/1--base/config.properties
+++ b/1--base/config.properties
@@ -9,13 +9,13 @@ count=200
 #BOCINS_cif_Cookie=Q1k0bGYfhhpYYPv4v923cfLQhJJQCnnznQz2MQvgrLfbTmb9L31C!-1228698765
 #PICCINS_JFCD_Cookie=
 
-user=980024
-JSESSIONID=pC34bQcX8XDmp1LST9GtkTfvSBv7S1QGLnzBVbnjzDk2P4hXyz1N!-1898374258
-BOCINS_prpall_Cookie=pFG2bQchJxKgLC9CbB2jF9X1zK6lMfn1K2TsG0ryQ59qxnkJWjjz!-53206610
+user=111215
+JSESSIONID=5K7rbYVQG1rlqMgxQZSZr30flPLz9b63Z1vyPD6bv70GynVpK5Zp!479108093
+BOCINS_prpall_Cookie=fhydbYVZ2ZSyVNmqjG0HXLTLyLslSn0z7xX8QmH7nR9CXh2JmVwp!-219218746
 BOCINS_cif_Cookie=Q1k0bGYfhhpYYPv4v923cfLQhJJQCnnznQz2MQvgrLfbTmb9L31C!-1228698765
 PICCINS_JFCD_Cookie=
 					
-
+					
 
 excelPath=C:\\Users\\Administrator\\Desktop\\
 #startTime=2017-06-21
